// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders all typography components with the expected spacing classes 1`] = `
.emotion-1 {
  display: block;
  font-family: -apple-system,BlinkMacSystemFont,Segoe UI,Helvetica,Arial,sans-serif,Apple Color Emoji,Segoe UI Emoji,Segoe UI Symbol;
  font-weight: 600;
  color: #111B2B;
  font-size: 1.25rem;
  line-height: 2rem;
  text-rendering: optimizeLegibility;
  margin: 0;
  margin-bottom: 1rem;
}

.emotion-2 {
  display: block;
  font-family: -apple-system,BlinkMacSystemFont,Segoe UI,Helvetica,Arial,sans-serif,Apple Color Emoji,Segoe UI Emoji,Segoe UI Symbol;
  font-weight: 600;
  color: #111B2B;
  font-size: 1.25rem;
  line-height: 2rem;
  text-rendering: optimizeLegibility;
  font-weight: 400;
  color: #414D63;
  font-size: 0.875rem;
  line-height: 1.25rem;
  margin: 0;
  margin-bottom: 1rem;
}

.emotion-0 {
  display: block;
  font-family: -apple-system,BlinkMacSystemFont,Segoe UI,Helvetica,Arial,sans-serif,Apple Color Emoji,Segoe UI Emoji,Segoe UI Symbol;
  font-weight: 600;
  color: #111B2B;
  font-size: 1.25rem;
  line-height: 2rem;
  text-rendering: optimizeLegibility;
  font-size: 1.75rem;
  line-height: 2.25rem;
  margin: 0;
  margin-bottom: 1.5rem;
}

.emotion-3 {
  display: block;
  font-family: -apple-system,BlinkMacSystemFont,Segoe UI,Helvetica,Arial,sans-serif,Apple Color Emoji,Segoe UI Emoji,Segoe UI Symbol;
  font-weight: 600;
  color: #111B2B;
  font-size: 1.25rem;
  line-height: 2rem;
  text-rendering: optimizeLegibility;
  font-size: 0.75rem;
  line-height: 1rem;
  -webkit-letter-spacing: 0.1rem;
  -moz-letter-spacing: 0.1rem;
  -ms-letter-spacing: 0.1rem;
  letter-spacing: 0.1rem;
  text-transform: uppercase;
  margin: 0;
  margin-bottom: 1.5rem;
}

.emotion-4 {
  display: block;
  font-family: -apple-system,BlinkMacSystemFont,Segoe UI,Helvetica,Arial,sans-serif,Apple Color Emoji,Segoe UI Emoji,Segoe UI Symbol;
  font-weight: 600;
  color: #111B2B;
  font-size: 1.25rem;
  line-height: 2rem;
  text-rendering: optimizeLegibility;
  font-size: 1rem;
  line-height: 1.5rem;
  margin: 0;
  margin-bottom: 1rem;
}

<div
  class="emotion-5"
  data-test-id="cf-ui-text-container"
>
  <h1
    class="emotion-0"
    data-test-id="cf-ui-display-text"
  >
    My DisplayText
  </h1>
  <h1
    class="emotion-1"
    data-test-id="cf-ui-heading"
  >
    My Heading
  </h1>
  <p
    class="emotion-2"
    data-test-id="cf-ui-text"
  >
    My Text
  </p>
  <h3
    class="emotion-3"
    data-test-id="cf-ui-section-heading"
  >
    My SectionHeading
  </h3>
  <h2
    class="emotion-4"
    data-test-id="cf-ui-subheading"
  >
    My Subheading
  </h2>
</div>
`;

exports[`renders the component 1`] = `
.emotion-0 {
  display: block;
  font-family: -apple-system,BlinkMacSystemFont,Segoe UI,Helvetica,Arial,sans-serif,Apple Color Emoji,Segoe UI Emoji,Segoe UI Symbol;
  font-weight: 600;
  color: #111B2B;
  font-size: 1.25rem;
  line-height: 2rem;
  text-rendering: optimizeLegibility;
  margin: 0;
  margin-bottom: 1rem;
}

.emotion-1 {
  display: block;
  font-family: -apple-system,BlinkMacSystemFont,Segoe UI,Helvetica,Arial,sans-serif,Apple Color Emoji,Segoe UI Emoji,Segoe UI Symbol;
  font-weight: 600;
  color: #111B2B;
  font-size: 1.25rem;
  line-height: 2rem;
  text-rendering: optimizeLegibility;
  font-weight: 400;
  color: #414D63;
  font-size: 0.875rem;
  line-height: 1.25rem;
  margin: 0;
  margin-bottom: 1rem;
}

<div
  class="emotion-2"
  data-test-id="cf-ui-text-container"
>
  <h1
    class="emotion-0"
    data-test-id="cf-ui-heading"
  >
    My Heading
  </h1>
  <p
    class="emotion-1"
    data-test-id="cf-ui-text"
  >
    My Text
  </p>
</div>
`;

exports[`renders the component with an additional class name 1`] = `
.emotion-0 {
  display: block;
  font-family: -apple-system,BlinkMacSystemFont,Segoe UI,Helvetica,Arial,sans-serif,Apple Color Emoji,Segoe UI Emoji,Segoe UI Symbol;
  font-weight: 600;
  color: #111B2B;
  font-size: 1.25rem;
  line-height: 2rem;
  text-rendering: optimizeLegibility;
  margin: 0;
  margin-bottom: 1rem;
}

.emotion-1 {
  display: block;
  font-family: -apple-system,BlinkMacSystemFont,Segoe UI,Helvetica,Arial,sans-serif,Apple Color Emoji,Segoe UI Emoji,Segoe UI Symbol;
  font-weight: 600;
  color: #111B2B;
  font-size: 1.25rem;
  line-height: 2rem;
  text-rendering: optimizeLegibility;
  font-weight: 400;
  color: #414D63;
  font-size: 0.875rem;
  line-height: 1.25rem;
  margin: 0;
  margin-bottom: 1rem;
}

<div
  class="my-extra-class emotion-2"
  data-test-id="cf-ui-text-container"
>
  <h1
    class="emotion-0"
    data-test-id="cf-ui-heading"
  >
    My Heading
  </h1>
  <p
    class="emotion-1"
    data-test-id="cf-ui-text"
  >
    My Text
  </p>
</div>
`;
